# open_vins

./: CMakeLists.txt  ReadMe.md
camera_models/: CMakeLists.txt
camera_models/include/camodocal/camera_models/: CameraFactory.h
camera_models/src/: intrinsic_calib.cc
camera_models/src/camera_models/: EquidistantCamera.cc
camera_models/src/gpl/: gpl.cc
config/Pimax/: 20210318.yaml  20210318_ov.yaml  20210318_vf.yaml  left_3.yaml  right_2.yaml
config/Pimax2/: left_3.yaml  right_2.yaml  stereo_imu.yaml  stereo_imu_ov.yaml
ov_core/: CMakeLists.txt
ov_core/src/init/: InertialInitializer.cpp
ov_core/src/track/: Grider_FAST.h  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h
ov_core/src/utils/: sensor_data.h
ov_data/: CMakeLists.txt
ov_eval/: CMakeLists.txt
ov_msckf/: CMakeLists.txt
ov_msckf/launch/: 20210318.launch  20210517.launch  20210517_full.launch  pgeneva_serial_eth.launch  tutorial.launch
ov_msckf/src/: Interface.cc  Interface.h  ros_serial_msckf.cpp  test_mapping.cpp  test_ov_main.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/sim/: Simulator.cpp
ov_msckf/src/state/: StateHelper.cpp  StateOptions.h
ov_msckf/src/update/: UpdaterZeroVelocity.cpp
ov_msckf/src/utils/: parse_cmd.h  parse_ros.h
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: vins_rviz.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  marginalization_factor.cpp  marginalization_factor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  solve_5pts.h
vins_estimator/src/utility/: visualization.cpp
